feat: add Makefile and aria2c-powered downloader
Add a comprehensive Makefile to streamline build, clean, lint, test, dependency management, and publishing tasks.

Include aria2 in dependencies and replace the basic urllib download logic with a new aria2c-based module for faster, parallel dbSNP VCF downloads.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,6 +35,7 @@ snakemake = "*"
 pyarrow = "*"
 ipython = "*"
 loguru = "*"
+aria2 = "*"
 
 [tool.pixi.pypi-dependencies]
 pyvariantdb = { path = ".", editable = true}
