--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,8 +12,10 @@ pyvariantdb-make-dbsnp = "pyvariantdb.scripts.dbsnp2parquet:main"
 
 # ---- build
 [build-system]
-requires = ["setuptools"]
-build-backend = "setuptools.build_meta"
+#requires = ["setuptools"]
+#build-backend = "setuptools.build_meta"
+requires = ["hatchling >= 1.26"]
+build-backend = "hatchling.build"
 
 [tool.setuptools.packages.find]
 include = ["pyvariantdb"]
@@ -22,7 +24,10 @@ include = ["pyvariantdb"]
 [tool.pixi.workspace]
 channels = ["conda-forge", "bioconda"]
 platforms = ["linux-64", "osx-arm64"]
+preview = ["pixi-build"]
 
+[tool.pixi.package.host-dependencies]
+hatchling = "*"
 
 [tool.pixi.dependencies]
 python = "*"
@@ -36,7 +41,6 @@ pyarrow = "*"
 ipython = "*"
 loguru = "*"
 aria2 = "*"
-
 [tool.pixi.pypi-dependencies]
 pyvariantdb = { path = ".", editable = true}
 
@@ -50,5 +54,6 @@ default = { features = ["all"], solve-group = "default" }
 prod = { features = ["prod"], solve-group = "default" }
 test = { features = ["test"], solve-group = "default" }
 
-[tool.pixi.feature.test.tasks]
-download = "pytest"
+[tool.pixi.package.build.backend]
+name = "pixi-build-python"
+version = "0.4.*"
