feat: add genome lookup method and simplify cache setup
Introduce a new query_genome method for aggregated Parquet lookups in SNPLookup.
Remove the DEFAULT_OUTPUT_DIR constant and streamline cache_dir initialization.
Add grayskull to test dependencies for enhanced package building.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -45,7 +45,7 @@ aria2 = "*"
 pyvariantdb = { path = ".", editable = true}
 
 [project.optional-dependencies]
-test = ["pytest", "twine", "pre-commit", "pytest-ruff", "ruff"]
+test = ["pytest", "twine", "pre-commit", "pytest-ruff", "ruff", "grayskull"]
 prod = ["pyvariantdb"]
 all = ["pyvariantdb[test]"]
 
