--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,10 +12,10 @@ pyvariantdb-make-dbsnp = "pyvariantdb.scripts.dbsnp2parquet:main"
 
 # ---- build
 [build-system]
-#requires = ["setuptools"]
-#build-backend = "setuptools.build_meta"
-requires = ["hatchling >= 1.26"]
-build-backend = "hatchling.build"
+requires = ["setuptools"]
+build-backend = "setuptools.build_meta"
+#requires = ["hatchling >= 1.26"]
+#build-backend = "hatchling.build"
 
 [tool.setuptools.packages.find]
 include = ["pyvariantdb"]
@@ -28,6 +28,7 @@ preview = ["pixi-build"]
 
 [tool.pixi.package.host-dependencies]
 hatchling = "*"
+setuptools = "*"
 
 [tool.pixi.dependencies]
 python = "*"
@@ -41,6 +42,7 @@ pyarrow = "*"
 ipython = "*"
 loguru = "*"
 aria2 = "*"
+python-build = "*"
 [tool.pixi.pypi-dependencies]
 pyvariantdb = { path = ".", editable = true}
 
