--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,6 +4,7 @@ version = "1.4"
 description = "A python package to download, process and access dbSNP data."
 readme = "README.md"
 requires-python = ">=3.11"
+license = {file = "LICENSE"}
 
 [project.scripts]
 pyvariantdb-download = "pyvariantdb.download:download_dbsnp"
